trunk/java/jtg/jtg.core/src/main/java/org/edgo/jtg/core/grammar/JavaTemplateGrammarParser.java
// Generated from ..\grammar\JavaTemplateGrammar.g4 by ANTLR 4.5.3


package org.edgo.jtg.core.grammar;

import org.edgo.jtg.core.model.ParsedUnit;


import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class JavaTemplateGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DIRECTIVE_CMD_TEMPLATE=1, DIRECTIVE_CMD_PROPERTY=2, DIRECTIVE_CMD_JAR=3, 
		DIRECTIVE_CMD_IMPORT=4, DIRECTIVE_CMD_INCLUDE=5, DIRECTIVE_CMD_EXTENDS=6, 
		DIRECTIVE_ATTR_LANGUAGE=7, DIRECTIVE_ATTR_TARGET_LANGUAGE=8, DIRECTIVE_ATTR_DESCRIPTION=9, 
		DIRECTIVE_ATTR_NAME=10, DIRECTIVE_ATTR_FILE=11, DIRECTIVE_ATTR_ARG=12, 
		DIRECTIVE_ATTR_PARAMS=13, DIRECTIVE_ATTR_PARENT=14, DIRECTIVE_ATTR_TYPE=15, 
		STRING_VALUE=16, MACROCODE_BEGIN=17, MACROCODE_END=18, PLACEHOLDER_BEGIN=19, 
		DIRECTIVE_BEGIN=20, COMMENT_BEGIN=21, SCRIPT_BEGIN=22, SCRIPT_END=23, 
		MACROCODE=24, TARGETCODE=25, WS_NEWLINE=26, MACRO_BLOCK_BEGIN=27, MACRO_END=28, 
		COMMENTCODE=29, COMMENT_END=30, SCRIPT_MACROCODE=31, ASSIGN=32, WS_DIR=33, 
		DIRECTIVE_END=34;
	public static final int
		RULE_template = 0, RULE_directive_template = 1, RULE_directive_import = 2, 
		RULE_directive_include = 3, RULE_directive_extends = 4, RULE_directive_jar = 5, 
		RULE_directive_property = 6, RULE_directive_attr_language = 7, RULE_directive_attr_target_language = 8, 
		RULE_directive_attr_description = 9, RULE_directive_attr_name = 10, RULE_directive_attr_parent = 11, 
		RULE_directive_attr_type = 12, RULE_directive_attr_file = 13, RULE_directive_attr_arg = 14, 
		RULE_directive_attr_params = 15, RULE_directive_attr = 16, RULE_script = 17, 
		RULE_placeholder = 18, RULE_macrocode = 19, RULE_comment = 20, RULE_targetcode = 21;
	public static final String[] ruleNames = {
		"template", "directive_template", "directive_import", "directive_include", 
		"directive_extends", "directive_jar", "directive_property", "directive_attr_language", 
		"directive_attr_target_language", "directive_attr_description", "directive_attr_name", 
		"directive_attr_parent", "directive_attr_type", "directive_attr_file", 
		"directive_attr_arg", "directive_attr_params", "directive_attr", "script", 
		"placeholder", "macrocode", "comment", "targetcode"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'codeTemplate'", "'property'", "'jar'", "'import'", "'include'", 
		"'extends'", "'language'", "'targetLanguage'", "'description'", "'name'", 
		"'file'", "'arg'", "'params'", "'parent'", "'type'", null, "'<#'", null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "'='"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "DIRECTIVE_CMD_TEMPLATE", "DIRECTIVE_CMD_PROPERTY", "DIRECTIVE_CMD_JAR", 
		"DIRECTIVE_CMD_IMPORT", "DIRECTIVE_CMD_INCLUDE", "DIRECTIVE_CMD_EXTENDS", 
		"DIRECTIVE_ATTR_LANGUAGE", "DIRECTIVE_ATTR_TARGET_LANGUAGE", "DIRECTIVE_ATTR_DESCRIPTION", 
		"DIRECTIVE_ATTR_NAME", "DIRECTIVE_ATTR_FILE", "DIRECTIVE_ATTR_ARG", "DIRECTIVE_ATTR_PARAMS", 
		"DIRECTIVE_ATTR_PARENT", "DIRECTIVE_ATTR_TYPE", "STRING_VALUE", "MACROCODE_BEGIN", 
		"MACROCODE_END", "PLACEHOLDER_BEGIN", "DIRECTIVE_BEGIN", "COMMENT_BEGIN", 
		"SCRIPT_BEGIN", "SCRIPT_END", "MACROCODE", "TARGETCODE", "WS_NEWLINE", 
		"MACRO_BLOCK_BEGIN", "MACRO_END", "COMMENTCODE", "COMMENT_END", "SCRIPT_MACROCODE", 
		"ASSIGN", "WS_DIR", "DIRECTIVE_END"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "JavaTemplateGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    private ParsedUnit unit;

	    public void setUnit(ParsedUnit unit) {
	        this.unit = unit;
	    }

	public JavaTemplateGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class TemplateContext extends ParserRuleContext {
		public Directive_templateContext directive_template() {
			return getRuleContext(Directive_templateContext.class,0);
		}
		public TerminalNode EOF() { return getToken(JavaTemplateGrammarParser.EOF, 0); }
		public List<Directive_jarContext> directive_jar() {
			return getRuleContexts(Directive_jarContext.class);
		}
		public Directive_jarContext directive_jar(int i) {
			return getRuleContext(Directive_jarContext.class,i);
		}
		public List<Directive_propertyContext> directive_property() {
			return getRuleContexts(Directive_propertyContext.class);
		}
		public Directive_propertyContext directive_property(int i) {
			return getRuleContext(Directive_propertyContext.class,i);
		}
		public List<Directive_importContext> directive_import() {
			return getRuleContexts(Directive_importContext.class);
		}
		public Directive_importContext directive_import(int i) {
			return getRuleContext(Directive_importContext.class,i);
		}
		public List<Directive_extendsContext> directive_extends() {
			return getRuleContexts(Directive_extendsContext.class);
		}
		public Directive_extendsContext directive_extends(int i) {
			return getRuleContext(Directive_extendsContext.class,i);
		}
		public List<TargetcodeContext> targetcode() {
			return getRuleContexts(TargetcodeContext.class);
		}
		public TargetcodeContext targetcode(int i) {
			return getRuleContext(TargetcodeContext.class,i);
		}
		public List<ScriptContext> script() {
			return getRuleContexts(ScriptContext.class);
		}
		public ScriptContext script(int i) {
			return getRuleContext(ScriptContext.class,i);
		}
		public List<PlaceholderContext> placeholder() {
			return getRuleContexts(PlaceholderContext.class);
		}
		public PlaceholderContext placeholder(int i) {
			return getRuleContext(PlaceholderContext.class,i);
		}
		public List<Directive_includeContext> directive_include() {
			return getRuleContexts(Directive_includeContext.class);
		}
		public Directive_includeContext directive_include(int i) {
			return getRuleContext(Directive_includeContext.class,i);
		}
		public List<MacrocodeContext> macrocode() {
			return getRuleContexts(MacrocodeContext.class);
		}
		public MacrocodeContext macrocode(int i) {
			return getRuleContext(MacrocodeContext.class,i);
		}
		public List<CommentContext> comment() {
			return getRuleContexts(CommentContext.class);
		}
		public CommentContext comment(int i) {
			return getRuleContext(CommentContext.class,i);
		}
		public TemplateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_template; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaTemplateGrammarListener ) ((JavaTemplateGrammarListener)listener).enterTemplate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaTemplateGrammarListener ) ((JavaTemplateGrammarListener)listener).exitTemplate(this);
		}
	}

	public final TemplateContext template() throws RecognitionException {
		TemplateContext _localctx = new TemplateContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_template);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			directive_template();
			setState(52);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(50);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
					case 1:
						{
						setState(45);
						directive_jar();
						}
						break;
					case 2:
						{
						setState(46);
						directive_property();
						}
						break;
					case 3:
						{
						setState(47);
						directive_import();
						}
						break;
					case 4:
						{
						setState(48);
						directive_extends();
						}
						break;
					case 5:
						{
						setState(49);
						targetcode();
						}
						break;
					}
					} 
				}
				setState(54);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(63);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MACROCODE_BEGIN) | (1L << TARGETCODE) | (1L << WS_NEWLINE))) != 0)) {
				{
				setState(61);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
				case 1:
					{
					setState(55);
					script();
					}
					break;
				case 2:
					{
					setState(56);
					placeholder();
					}
					break;
				case 3:
					{
					setState(57);
					directive_include();
					}
					break;
				case 4:
					{
					setState(58);
					macrocode();
					}
					break;
				case 5:
					{
					setState(59);
					comment();
					}
					break;
				case 6:
					{
					setState(60);
					targetcode();
					}
					break;
				}
				}
				setState(65);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(66);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Directive_templateContext extends ParserRuleContext {
		public Token v;
		public Directive_attr_languageContext lang;
		public Directive_attr_target_languageContext targetlanguage;
		public TerminalNode MACROCODE_BEGIN() { return getToken(JavaTemplateGrammarParser.MACROCODE_BEGIN, 0); }
		public TerminalNode DIRECTIVE_BEGIN() { return getToken(JavaTemplateGrammarParser.DIRECTIVE_BEGIN, 0); }
		public TerminalNode DIRECTIVE_END() { return getToken(JavaTemplateGrammarParser.DIRECTIVE_END, 0); }
		public TerminalNode DIRECTIVE_CMD_TEMPLATE() { return getToken(JavaTemplateGrammarParser.DIRECTIVE_CMD_TEMPLATE, 0); }
		public Directive_attr_languageContext directive_attr_language() {
			return getRuleContext(Directive_attr_languageContext.class,0);
		}
		public Directive_attr_target_languageContext directive_attr_target_language() {
			return getRuleContext(Directive_attr_target_languageContext.class,0);
		}
		public List<TerminalNode> WS_DIR() { return getTokens(JavaTemplateGrammarParser.WS_DIR); }
		public TerminalNode WS_DIR(int i) {
			return getToken(JavaTemplateGrammarParser.WS_DIR, i);
		}
		public Directive_attr_descriptionContext directive_attr_description() {
			return getRuleContext(Directive_attr_descriptionContext.class,0);
		}
		public List<TerminalNode> WS_NEWLINE() { return getTokens(JavaTemplateGrammarParser.WS_NEWLINE); }
		public TerminalNode WS_NEWLINE(int i) {
			return getToken(JavaTemplateGrammarParser.WS_NEWLINE, i);
		}
		public Directive_templateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_directive_template; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaTemplateGrammarListener ) ((JavaTemplateGrammarListener)listener).enterDirective_template(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaTemplateGrammarListener ) ((JavaTemplateGrammarListener)listener).exitDirective_template(this);
		}
	}

	public final Directive_templateContext directive_template() throws RecognitionException {
		Directive_templateContext _localctx = new Directive_templateContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_directive_template);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(MACROCODE_BEGIN);
			setState(69);
			match(DIRECTIVE_BEGIN);
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS_DIR) {
				{
				{
				setState(70);
				match(WS_DIR);
				}
				}
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(76);
			((Directive_templateContext)_localctx).v = match(DIRECTIVE_CMD_TEMPLATE);
			setState(78); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(77);
				match(WS_DIR);
				}
				}
				setState(80); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==WS_DIR );
			setState(82);
			((Directive_templateContext)_localctx).lang = directive_attr_language();
			setState(84); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(83);
				match(WS_DIR);
				}
				}
				setState(86); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==WS_DIR );
			setState(88);
			((Directive_templateContext)_localctx).targetlanguage = directive_attr_target_language();
			setState(95);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(90); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(89);
					match(WS_DIR);
					}
					}
					setState(92); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==WS_DIR );
				setState(94);
				directive_attr_description();
				}
				break;
			}
			setState(100);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS_DIR) {
				{
				{
				setState(97);
				match(WS_DIR);
				}
				}
				setState(102);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(103);
			match(DIRECTIVE_END);
			setState(107);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(104);
					match(WS_NEWLINE);
					}
					} 
				}
				setState(109);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			}

					unit.setMacroLang(((Directive_templateContext)_localctx).lang.lang);
				  
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Directive_importContext extends ParserRuleContext {
		public Token v;
		public Directive_attr_nameContext ns;
		public TerminalNode MACROCODE_BEGIN() { return getToken(JavaTemplateGrammarParser.MACROCODE_BEGIN, 0); }
		public TerminalNode DIRECTIVE_BEGIN() { return getToken(JavaTemplateGrammarParser.DIRECTIVE_BEGIN, 0); }
		public TerminalNode DIRECTIVE_END() { return getToken(JavaTemplateGrammarParser.DIRECTIVE_END, 0); }
		public TerminalNode DIRECTIVE_CMD_IMPORT() { return getToken(JavaTemplateGrammarParser.DIRECTIVE_CMD_IMPORT, 0); }
		public Directive_attr_nameContext directive_attr_name() {
			return getRuleContext(Directive_attr_nameContext.class,0);
		}
		public List<TerminalNode> WS_DIR() { return getTokens(JavaTemplateGrammarParser.WS_DIR); }
		public TerminalNode WS_DIR(int i) {
			return getToken(JavaTemplateGrammarParser.WS_DIR, i);
		}
		public List<TerminalNode> WS_NEWLINE() { return getTokens(JavaTemplateGrammarParser.WS_NEWLINE); }
		public TerminalNode WS_NEWLINE(int i) {
			return getToken(JavaTemplateGrammarParser.WS_NEWLINE, i);
		}
		public Directive_importContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_directive_import; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaTemplateGrammarListener ) ((JavaTemplateGrammarListener)listener).enterDirective_import(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaTemplateGrammarListener ) ((JavaTemplateGrammarListener)listener).exitDirective_import(this);
		}
	}

	public final Directive_importContext directive_import() throws RecognitionException {
		Directive_importContext _localctx = new Directive_importContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_directive_import);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(MACROCODE_BEGIN);
			setState(113);
			match(DIRECTIVE_BEGIN);
			setState(115);
			_la = _input.LA(1);
			if (_la==WS_DIR) {
				{
				setState(114);
				match(WS_DIR);
				}
			}

			setState(117);
			((Directive_importContext)_localctx).v = match(DIRECTIVE_CMD_IMPORT);
			setState(119); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(118);
				match(WS_DIR);
				}
				}
				setState(121); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==WS_DIR );
			setState(123);
			((Directive_importContext)_localctx).ns = directive_attr_name();
			setState(125);
			_la = _input.LA(1);
			if (_la==WS_DIR) {
				{
				setState(124);
				match(WS_DIR);
				}
			}

			setState(127);
			match(DIRECTIVE_END);
			setState(131);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(128);
					match(WS_NEWLINE);
					}
					} 
				}
				setState(133);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
			}

					unit.directiveImport(((Directive_importContext)_localctx).ns.name, ((Directive_importContext)_localctx).v.getLine()); 
				
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Directive_includeContext extends ParserRuleContext {
		public Token v;
		public Directive_attr_fileContext file;
		public Directive_attr_paramsContext params;
		public Directive_attr_argContext arg;
		public TerminalNode MACROCODE_BEGIN() { return getToken(JavaTemplateGrammarParser.MACROCODE_BEGIN, 0); }
		public TerminalNode DIRECTIVE_BEGIN() { return getToken(JavaTemplateGrammarParser.DIRECTIVE_BEGIN, 0); }
		public TerminalNode DIRECTIVE_END() { return getToken(JavaTemplateGrammarParser.DIRECTIVE_END, 0); }
		public TerminalNode DIRECTIVE_CMD_INCLUDE() { return getToken(JavaTemplateGrammarParser.DIRECTIVE_CMD_INCLUDE, 0); }
		public Directive_attr_fileContext directive_attr_file() {
			return getRuleContext(Directive_attr_fileContext.class,0);
		}
		public List<TerminalNode> WS_DIR() { return getTokens(JavaTemplateGrammarParser.WS_DIR); }
		public TerminalNode WS_DIR(int i) {
			return getToken(JavaTemplateGrammarParser.WS_DIR, i);
		}
		public List<TerminalNode> WS_NEWLINE() { return getTokens(JavaTemplateGrammarParser.WS_NEWLINE); }
		public TerminalNode WS_NEWLINE(int i) {
			return getToken(JavaTemplateGrammarParser.WS_NEWLINE, i);
		}
		public Directive_attr_paramsContext directive_attr_params() {
			return getRuleContext(Directive_attr_paramsContext.class,0);
		}
		public Directive_attr_argContext directive_attr_arg() {
			return getRuleContext(Directive_attr_argContext.class,0);
		}
		public Directive_includeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_directive_include; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaTemplateGrammarListener ) ((JavaTemplateGrammarListener)listener).enterDirective_include(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaTemplateGrammarListener ) ((JavaTemplateGrammarListener)listener).exitDirective_include(this);
		}
	}

	public final Directive_includeContext directive_include() throws RecognitionException {
		Directive_includeContext _localctx = new Directive_includeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_directive_include);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			match(MACROCODE_BEGIN);
			setState(137);
			match(DIRECTIVE_BEGIN);
			setState(139);
			_la = _input.LA(1);
			if (_la==WS_DIR) {
				{
				setState(138);
				match(WS_DIR);
				}
			}

			setState(141);
			((Directive_includeContext)_localctx).v = match(DIRECTIVE_CMD_INCLUDE);
			setState(143); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(142);
				match(WS_DIR);
				}
				}
				setState(145); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==WS_DIR );
			setState(147);
			((Directive_includeContext)_localctx).file = directive_attr_file();
			setState(154);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,18,_ctx) ) {
			case 1:
				{
				setState(149); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(148);
					match(WS_DIR);
					}
					}
					setState(151); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==WS_DIR );
				setState(153);
				((Directive_includeContext)_localctx).params = directive_attr_params();
				}
				break;
			}
			setState(162);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,20,_ctx) ) {
			case 1:
				{
				setState(157); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(156);
					match(WS_DIR);
					}
					}
					setState(159); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==WS_DIR );
				setState(161);
				((Directive_includeContext)_localctx).arg = directive_attr_arg();
				}
				break;
			}
			setState(165);
			_la = _input.LA(1);
			if (_la==WS_DIR) {
				{
				setState(164);
				match(WS_DIR);
				}
			}

			setState(167);
			match(DIRECTIVE_END);
			setState(171);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,22,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(168);
					match(WS_NEWLINE);
					}
					} 
				}
				setState(173);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,22,_ctx);
			}

			      	String params = null;
			      	if (_localctx.params != null) {
			      		params = _localctx.params.params;
			      	}
			      	String arg = null;
			      	if (_localctx.arg != null) {
			      		arg = _localctx.arg.arg;
			      	}
					unit.addInclude(((Directive_includeContext)_localctx).v, ((Directive_includeContext)_localctx).file.file, params, arg); 
				  
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Directive_extendsContext extends ParserRuleContext {
		public Token v;
		public Directive_attr_parentContext parent;
		public TerminalNode MACROCODE_BEGIN() { return getToken(JavaTemplateGrammarParser.MACROCODE_BEGIN, 0); }
		public TerminalNode DIRECTIVE_BEGIN() { return getToken(JavaTemplateGrammarParser.DIRECTIVE_BEGIN, 0); }
		public TerminalNode DIRECTIVE_END() { return getToken(JavaTemplateGrammarParser.DIRECTIVE_END, 0); }
		public TerminalNode DIRECTIVE_CMD_EXTENDS() { return getToken(JavaTemplateGrammarParser.DIRECTIVE_CMD_EXTENDS, 0); }
		public Directive_attr_parentContext directive_attr_parent() {
			return getRuleContext(Directive_attr_parentContext.class,0);
		}
		public List<TerminalNode> WS_DIR() { return getTokens(JavaTemplateGrammarParser.WS_DIR); }
		public TerminalNode WS_DIR(int i) {
			return getToken(JavaTemplateGrammarParser.WS_DIR, i);
		}
		public List<TerminalNode> WS_NEWLINE() { return getTokens(JavaTemplateGrammarParser.WS_NEWLINE); }
		public TerminalNode WS_NEWLINE(int i) {
			return getToken(JavaTemplateGrammarParser.WS_NEWLINE, i);
		}
		public Directive_extendsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_directive_extends; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaTemplateGrammarListener ) ((JavaTemplateGrammarListener)listener).enterDirective_extends(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaTemplateGrammarListener ) ((JavaTemplateGrammarListener)listener).exitDirective_extends(this);
		}
	}

	public final Directive_extendsContext directive_extends() throws RecognitionException {
		Directive_extendsContext _localctx = new Directive_extendsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_directive_extends);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(176);
			match(MACROCODE_BEGIN);
			setState(177);
			match(DIRECTIVE_BEGIN);
			setState(179);
